tests/golden/type_errors/array_reduce_generic_callback.cd
fun keep<T>(acc: T, value: number): T {
  return acc;
}
reduce([1], 0, keep);
