tests/golden/type_errors/array_reduce_generic_callback.err
Type error at 4:20: reduce expects a non-generic callback
  reduce([1], 0, keep);
                     ^
